test/corpus/match_return.txt
============================================
Simple MATCH RETURN
============================================

MATCH (n) RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
MATCH RETURN with property access
============================================

MATCH (n) RETURN n.name, n.age

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (property_access
              object: (expression
                (identifier))
              property: (identifier))))
        (return_item
          (expression
            (property_access
              object: (expression
                (identifier))
              property: (identifier))))))))

============================================
MATCH WHERE RETURN
============================================

MATCH (n) WHERE n.active = true RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier))))
      where: (where_clause
        (expression
          (binary_expression
            left: (expression
              (property_access
                object: (expression
                  (identifier))
                property: (identifier)))
            right: (expression
              (boolean_literal))))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
OPTIONAL MATCH
============================================

OPTIONAL MATCH (n) RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
RETURN DISTINCT
============================================

MATCH (n) RETURN DISTINCT n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
ERROR - MATCH with no RETURN
============================================

MATCH (n)

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)))))))

============================================
ERROR - missing closing paren in node pattern
============================================

MATCH (n RETURN n

---

(source_file
  (statement
    (match_clause
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)
            (MISSING ")")))))
    (return_clause
      (return_body
        (return_item
          (expression
            (identifier)))))))

============================================
MATCH ALL path search prefix
============================================

MATCH ALL (a:Person)-[*]-(b:Person) RETURN a, b

---

(source_file
  (statement
    (match_clause
      (path_search_prefix
        (all_path_search))
      pattern: (pattern
        (path_pattern
          (node_pattern
            variable: (identifier)
            label: (label_expression label_name: (identifier)))
          (relationship_pattern
            (relationship_body length: (path_length)))
          (node_pattern
            variable: (identifier)
            label: (label_expression label_name: (identifier))))))
    (return_clause
      (return_body
        (return_item (expression (identifier)))
        (return_item (expression (identifier)))))))

============================================
MATCH ANY SHORTEST path search prefix
============================================

MATCH ANY SHORTEST (a)-[*]-(b) RETURN a

---

(source_file
  (statement
    (match_clause
      (path_search_prefix
        (any_shortest_path_search))
      pattern: (pattern
        (path_pattern
          (node_pattern variable: (identifier))
          (relationship_pattern
            (relationship_body length: (path_length)))
          (node_pattern variable: (identifier)))))
    (return_clause
      (return_body
        (return_item (expression (identifier)))))))

============================================
MATCH SHORTEST n path search prefix
============================================

MATCH SHORTEST 3 (a)-[*]-(b) RETURN a

---

(source_file
  (statement
    (match_clause
      (path_search_prefix
        (counted_shortest_path_search
          (integer_literal)))
      pattern: (pattern
        (path_pattern
          (node_pattern variable: (identifier))
          (relationship_pattern
            (relationship_body length: (path_length)))
          (node_pattern variable: (identifier)))))
    (return_clause
      (return_body
        (return_item (expression (identifier)))))))
